# mobile-inference-kpi-lab

./: .gitignore  README.md
.claude/: settings.local.json
analysis/: check_image_quality.py  clip_score_phase1.py  clip_score_phase2.py  parse_eraser_csv.py  parse_phase4_sustained.py  parse_txt2img_csv.py
analysis/notebooks/: 01_baseline.ipynb  02_policy_comparison.ipynb
analysis/scripts/: parse_logs.py  plot_kpi.py
android/: gradlew  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  device_info.cpp  device_info.h  inference_engine.cpp  inference_engine.h  kpi_logger.cpp  kpi_logger.h  native_runner.cpp
docs/: QNN_SETUP.md  app_architecture.md  design_rationale.md  execution_profiles.md  experiment_design.md  experiment_report.md  experiment_runs.md  interview.md  model_optimization.md  qnn_options.md  troubleshooting.md  weights_inventory.md
docs/report/: app_architecture.md  experiment_report.md
models/: README.md
models/scripts/: analyze_ops.py  convert_to_dlc.py  convert_to_tflite.py
scripts/: add_pre_post.py  analyze_ops.py  analyze_qnn_compat.py  eval_accuracy.py  eval_sd_inpaint_quality.py  eval_sd_quality.py  eval_yolo_seg_quality.py  example_sd_inference.py  export_sd_to_onnx.py  export_to_onnx.py  export_yolo_seg.py  extract_tokenizer_assets.py  generate_test_data.py  graph_transform.py  make_quantize_io.py  prepare_deploy_models.py  profile_qai_hub.py  profile_sd_qai_hub.py  push_models_to_device.sh  quant_runpod.py  requirements.txt  setup_calibration_data.py  setup_qnn.py
scripts/deploy/: deploy_config.json  export_text_embeddings.py  extract_tokenizer_assets.py  prepare_deploy_models.py  push_models_to_device.sh
scripts/inference/: img2img_resolution_compare.py  resolution_compare.py  sd_lcm_prompt_guide.txt  text2img_sd_lcm_compare.py
scripts/sd/: analyze_onnx_ops.py  eval_sd_inpaint_quality.py  eval_sd_quant_quality.py  export_sd_lcm_unet.py  export_sd_lcm_unet_w8a16.py  export_sd_to_onnx.py  hub_compile_unet_fp32.py  hub_compile_unet_mixed.py  profile_sd_qai_hub.py  quant_report_sd.py  quant_runpod.py  sample_inpaint.py  submit_unet_quantize.py
scripts/yolo/: eval_yolo_seg_quality.py  export_yolo_seg.py  quant_report_yolo.py
(+47 files in other folders)
